Fix displaying on mobile phones

--- a/ui/src/assets/css/custom.css
+++ b/ui/src/assets/css/custom.css
@@ -1,3 +1,9 @@
 body {
-  min-width: 320px;
+  min-width: 475px;
+}
+
+@media screen and (max-width: 475px) {
+  @-o-viewport {
+    width: 475px;
+  }
 }
